<?xml version="1.0"?>
<package>
  <name>franka_core_msgs</name>
  <version>0.0.1</version>
  <description>
    Messages and Services required for communication with the Franka robot when using 
    franka_ros_interface
  </description>

  <maintainer email="sxs1412@bham.ac.uk">
    Saif Sidhik
  </maintainer>
  <license>TODO</license>

  <author>Saif Sidhik</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- package contains messages -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>franka_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>franka_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
